Bug 43245 - Screen corruption with xterm scrollbars (with sna enabled)
Summary: Screen corruption with xterm scrollbars (with sna enabled)
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-25 07:56 UTC by Ulrich Müller
Modified: 2011-11-26 03:06 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
screenshot (76.94 KB, image/png)
2011-11-25 07:56 UTC, Ulrich Müller
no flags Details

Description Ulrich Müller 2011-11-25 07:56:46 UTC
Created attachment 53850 [details]
screenshot

Forwarding downstream bug <https://bugs.gentoo.org/391819>.

Version 2.17.0 (but also git HEAD from today) of the Intel driver configured with options --enable-dri --enable-sna --enable-xvmc causes screen corruption, as in attached screenshot.

To reproduce:
1. Start an xterm
2. Resize it vertically using the mouse

After downgrading to 2.16.0 the problem disappeared. It also doesn't occur with --disable-sna.

linux 3.1.1-gentoo
mesa 7.11.1
libdrm 2.4.27


Git bisect tells me:

7f7f95abbf57e6e71f6a30d917f97c2f2bd6cea9 is the first bad commit
commit 7f7f95abbf57e6e71f6a30d917f97c2f2bd6cea9
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Sep 23 11:38:18 2011 +0100

    sna/accel: Use the PolyFillRect to handle tiled spans

    Would be preferrable to duplicate the tiling logic. Leave the task of
    reimplementing XAA to another day!

    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 1 Chris Wilson 2011-11-25 08:02:50 UTC
So it looks to be a double application of the drawable offsets. Is a compositing WM enabled as well for extra complications?
Comment 2 Ulrich Müller 2011-11-25 08:15:18 UTC
(In reply to comment #1)
> Is a compositing WM enabled as well for extra complications?

xfwm4 version 4.8.2, with display compositing disabled in settings.
Comment 3 Chris Wilson 2011-11-25 08:32:17 UTC
commit 16f5e224dcfd97012b38ee1af6c72dbe3c0f3304
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Nov 25 16:21:41 2011 +0000

    sna: Avoid the double application of drawable offsets for tiled spans
    
    As we handle tiled spans indirectly, we need to avoid applying the
    drawable offsets twice (once in the mi layer generating the spans, and
    then once more in the tiled rect renderer).
    
    Reported-by: Ulrich Müller <ulm@gentoo.org>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=43245
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

I didn't manage to trick xterm in reproducing the broken behaviour (looks like I have a different scrollbar widget) but the bug looks fairly self-explanatory. Can you please test with tip to see if I have corrected the issue?
Comment 4 Ulrich Müller 2011-11-25 10:44:44 UTC
(In reply to comment #3)
> Can you please test with tip to see if I have corrected the issue?

Yes, it seems to work fine. Tested with:
- current git master
- 2.17.0 with the patch from commit 16f5e22 applied

Thank you.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.